--- a/dashboard.html
+++ b/dashboard.html
@@ -10,10 +10,13 @@
     
 <nav>
     <h1>HR HARMONY</h1>
+    <div class="searchbar">
     <input type="text" placeholder="Search...">
+    <img src="./img/icons/magnifying.svg">
+    </div>
     <div>
-    <img src="./img/notification.svg">
-    <img src="./img/account.svg">
+    <img src="./img/icons/notification.svg">
+    <img src="./img/icons/account.svg">
     </div>
 </nav>
 
