--- a/dashboard.html
+++ b/dashboard.html
@@ -21,5 +21,42 @@
 </nav>
 
 
+
+
+<div class="sidebar">
+
+    
+    <div class="links">
+
+        <div>
+            <a href="#">Dashboard</a>
+        </div>
+
+
+        <div>
+            <a href="#">Apply Leave</a>
+            <a href="#">Appraisal</a>
+            <a href="#">Task</a>
+            <a href="#">Payslip</a>
+            <a href="#">Training</a>
+        </div>
+
+        <div>
+            <a href="#">Account</a>
+            <a href="#">Logout</a>
+        </div>
+
+    </div>
+
+
+
+</div>
+
+<div class="content">
+
+</div>
+
+
+
 </body>
 </html>
