moving input login

--- a/login.html
+++ b/login.html
@@ -20,10 +20,18 @@
         </div>
 
         <div class="login-area">
+
+
             <div class="inputs">
-            <input type="text" placeholder="Username" />
-            <input type="text" placeholder="Password" />
-          </div>
+              <input type="text" required="required"/>
+              <label class="placeholder">Email</label>
+            </div>
+
+            <div class="inputs">
+              <input type="password" required="required"/>
+              <label class="placeholder">Password</label>
+            </div>
+            
 
           <div class="loginbutton">
             <button>LOGIN</button>
