moving placeholder signup

--- a/signup.html
+++ b/signup.html
@@ -34,17 +34,45 @@
             <div class="signup-form">
 
                 <div class="name">
-                    <input type="text" placeholder="First Name">
-                    <input type="text" placeholder="Last Name">
+                    <div class="inputbox">
+                        <input type="text" required="required">
+                        <label class="placeholder">First Name</label>
+                    </div>
+
+                    <div class="inputbox">
+                        <input type="text" required="required">
+                        <label class="placeholder">Last Name</label>
+                    </div>
                 </div>
-                <input type="email" placeholder="Email">
+
+                <div class="inputbox">
+                    <input type="text" required="required">
+                    <label class="placeholder">Email</label>
+                </div>
+
                 <div class="phonenumber">
+
+                    <div class="inputboxphone">
+                    <input type="text" required="required">
+                    <label class="placeholder">Phone Number</label>
+                    </div>
                     <span>+60</span>
-                    <input type="text" placeholder="Phone Number">
                 </div>
-                <input type="text" placeholder="IC Number">
-                <input type="text" placeholder="Positon">
-                <input type="password" placeholder="Password">
+                
+                <div class="inputbox">
+                <input type="text" required="required">
+                <label class="placeholder">IC Number</label>
+                </div>
+
+                <div class="inputbox">
+                <input type="text" required="required">
+                <label class="placeholder">Position</label>
+                </div>
+
+                <div class="inputbox">
+                <input type="password" required="required">
+                <label class="placeholder" >Password</label>
+                </div>
 
 
                 <button>SIGN UP</button>
