--- a/signup.html
+++ b/signup.html
@@ -52,7 +52,7 @@
 
                 <div class="phonenumber">
 
-                    <div class="inputboxphone">
+                    <div class="inputbox">
                     <input type="text" required="required">
                     <label class="placeholder">Phone Number</label>
                     </div>
@@ -80,7 +80,7 @@
 
             </div>
 
-            <div class="bottomlogin">
+            <div class="donthaveaccount">
             <span> already have an account? <a href="./login.html">Sign in</a></span>
             </div>
 
