--- a/dashboard.html
+++ b/dashboard.html
@@ -1,47 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./css/dashboard.css">
-	<title>Document</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/dashboard.css" />
+		<title>Document</title>
+	</head>
+	<body>
+		<div class="side-bar">
+			<input type="checkbox" id="sidebar-active" />
+			<label for="sidebar-active">
+				<img class="icon" src="./img/icons/menu.svg" />
+			</label>
 
+			<div class="links-container">
+				<label for="sidebar-active">
+					<img class="icon" src="./img//icons/close.svg" />
+				</label>
 
+				<a href="#">Dashboard</a>
+				<a href="#">Apply Leave</a>
+				<a href="#"> Appraisal</a>
+				<a href="#">Task</a>
+				<a href="#">Payslip</a>
+				<a href="#">Training</a>
+				<a href="#">Account</a>
+				<a href="#">Logout</a>
+			</div>
+		</div>
 
-
-<div class="side-bar">
-		<input type="checkbox" id="sidebar-active">
-		<label for="sidebar-active">
-			<img class="icon" src="./img/icons/menu.svg">
-		</label>
-
-
-	<div class="links-container">
-		<label for="sidebar-active">
-			<img class="icon" src="./img//icons/close.svg">
-		</label>
-
-
-		<a href="#">Dashboard</a>
-		<a href="#">Apply Leave</a>
-		<a href="#"> Appraisal</a>
-		<a href="#">Task</a>
-		<a href="#">Payslip</a>
-		<a href="#">Training</a>
-		<a href="#">Account</a>
-		<a href="#">Logout</a>
-	</div>
-</div>
-
-<div class="content">
-	<div class="header">
-		<span>HR HAMONRY</span>
-	</div>
-</div>
-
-
-	
-</body>
+		<div class="content">
+			<div class="header">
+				<span>HR HAMONRY</span>
+			</div>
+		</div>
+	</body>
 </html>
