--- a/dashboard.html
+++ b/dashboard.html
@@ -32,6 +32,11 @@
 		<div class="content">
 			<div class="header">
 				<span>HR HAMONRY</span>
+
+				<div class="search-bar">
+					<input type="text" placeholder="Search..." />
+					<img src="./img/icons/search.svg" />
+				</div>
 			</div>
 		</div>
 	</body>
