--- a/dashboard.html
+++ b/dashboard.html
@@ -30,5 +30,17 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="main">
+			<div class="header">
+				<h1>HR HARMONY</h1>
+				<div class="searchbar">
+					<input type="search" placeholder="Search..." />
+					<img src="img/icons/search.svg" />
+				</div>
+				<img src="img/icons/notification.svg" />
+				<img src="img/icons/account.svg" />
+			</div>
+		</div>
 	</body>
 </html>
