color theme and logo

--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,8 @@
 	<body>
 		<div class="sidebar">
 			<div class="sidebar-links">
+				<img src="img/logo.png" class="logo" />
+
 				<div class="sidebar-item">
 					<a href="#"> <img src="img/icons/dashboard.svg" />Dashboard</a>
 				</div>
@@ -18,11 +20,19 @@
 				</div>
 
 				<div class="sidebar-item">
+					<a href="#"><img src="img/icons/appraisal.svg" /> Appraisal</a>
+				</div>
+
+				<div class="sidebar-item">
 					<a href="#"> <img src="img/icons/payment.svg" />Payslip</a>
 				</div>
 
 				<div class="sidebar-item">
 					<a href="#"> <img src="img/icons/training.svg" />Training</a>
+				</div>
+
+				<div class="sidebar-item">
+					<a href="#"><img src="img/icons/account.svg" /> Account</a>
 				</div>
 
 				<div class="sidebar-item">
