dashboard update - svg

--- a/dashboard.html
+++ b/dashboard.html
@@ -51,6 +51,36 @@
 				<img src="img/icons/notification.svg" />
 				<img src="img/icons/account.svg" />
 			</div>
+
+			<div class="dashboard-content">
+				<div>
+					<h1>Dashboard</h1>
+				</div>
+
+				<div class="card-section">
+					<div class="card">
+						<span>Person</span>
+						<h2>Name</h2>
+					</div>
+
+					<div class="card">
+						<span>Person</span>
+						<h2>Name</h2>
+					</div>
+
+					<div class="card">
+						<span>Person</span>
+						<h2>Name</h2>
+					</div>
+
+					<div class="card">
+						<span>Person</span>
+						<h2>Name</h2>
+					</div>
+				</div>
+
+				<div class="test">test</div>
+			</div>
 		</div>
 	</body>
 </html>
