--- a/signup.html
+++ b/signup.html
@@ -55,21 +55,26 @@
 					</div>
 
 					<div class="inputbox">
-						<input type="text" required="required" />
-						<label class="placeholder">Position</label>
+						<input type="password" required="required" />
+						<label class="placeholder">Password</label>
 					</div>
 
 					<div class="inputbox">
-						<input type="password" required="required" />
-						<label class="placeholder">Password</label>
+						<span>Enter your position: </span>
+						<select required>
+							<option selected disabled hidden value="none"></option>
+							<option>Manager</option>
+							<option>Employee</option>
+							<option>Lecturer</option>
+							<option>Admin</option>
+						</select>
 					</div>
 
 					<button>SIGN UP</button>
 				</div>
 
 				<div class="alreadyaccount">
-					<span>
-						already have an account? <a href="./login.html">Sign in</a></span>
+					<span> already have an account? <a href="./login.html">Sign in</a></span>
 				</div>
 			</div>
 		</div>
