--- a/signup.html
+++ b/signup.html
@@ -55,19 +55,13 @@
 					</div>
 
 					<div class="inputbox">
-						<input type="password" required="required" />
-						<label class="placeholder">Password</label>
+						<input type="text" required="required" />
+						<label class="placeholder">Position</label>
 					</div>
 
 					<div class="inputbox">
-						<span>Enter your position: </span>
-						<select required>
-							<option selected disabled hidden value="none"></option>
-							<option>Manager</option>
-							<option>Employee</option>
-							<option>Lecturer</option>
-							<option>Admin</option>
-						</select>
+						<input type="password" required="required" />
+						<label class="placeholder">Password</label>
 					</div>
 
 					<button>SIGN UP</button>
