--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<div class="login-container">
+		<div class="container">
 			<div class="login-section">
 				<div class="logo-area">
 					<span> HR HARMONY</span>
@@ -16,18 +16,18 @@
 				</div>
 
 				<div class="input-area">
-					<div class="inputs">
+					<div class="inputbox">
 						<input type="text" required="required" />
 						<label class="placeholder">Email</label>
 					</div>
 
-					<div class="inputs">
+					<div class="inputbox">
 						<input type="password" required="required" />
 						<label class="placeholder">Password</label>
 					</div>
 				</div>
 
-				<div class="loginbutton">
+				<div class="login-area">
 					<button>LOGIN</button>
 				</div>
 
