--- a/signup.html
+++ b/signup.html
@@ -10,11 +10,11 @@
 	<body>
 		<div class="container">
 			<div class="image-section">
-				<div class="welcome">
+				<div class="welcome-text-image">
 					<span>WELCOME TO</span>
 					<h1>HR HARMONY</h1>
 				</div>
-				<h1 class="logotext">HR HARMONY</h1>
+				<h1>HR HARMONY</h1>
 			</div>
 
 			<div class="input-section">
@@ -41,7 +41,7 @@
 						<label class="placeholder">Email</label>
 					</div>
 
-					<div class="phonenumber">
+					<div class="inputbox-phone">
 						<div class="inputbox">
 							<input type="text" required="required" />
 							<label class="placeholder">Phone Number</label>
@@ -73,7 +73,7 @@
 					<button>SIGN UP</button>
 				</div>
 
-				<div class="alreadyaccount">
+				<div class="go-to-sign-in">
 					<span>already have an account? <a href="./login.html">Sign in</a></span>
 				</div>
 			</div>
