--- a/signup.html
+++ b/signup.html
@@ -25,53 +25,53 @@
 
 				<div>
 					<form class="signup-form" action="register.php" method="post">
-					<div class="name">
-						<div class="inputbox">
+						<div class="name">
+							<div class="inputbox">
 								<input name="first_name" type="text" required="required" />
-							<label class="placeholder">First Name</label>
-						</div>
+								<label class="placeholder">First Name</label>
+							</div>
 
-						<div class="inputbox">
+							<div class="inputbox">
 								<input name="last_name" type="text" required="required" />
-							<label class="placeholder">Last Name</label>
+								<label class="placeholder">Last Name</label>
+							</div>
 						</div>
-					</div>
 
-					<div class="inputbox">
-							<input name="email" type="text" required="required" />
-						<label class="placeholder">Email</label>
-					</div>
-
-					<div class="inputbox-phone">
 						<div class="inputbox">
-								<input name="phone_number" type="text" required="required" />
-							<label class="placeholder">Phone Number</label>
+							<input name="email" type="text" required="required" />
+							<label class="placeholder">Email</label>
 						</div>
-						<span>+60</span>
-					</div>
 
-					<div class="inputbox">
+						<div class="inputbox-phone">
+							<div class="inputbox">
+								<input name="phone_number" type="text" required="required" />
+								<label class="placeholder">Phone Number</label>
+							</div>
+							<span>+60</span>
+						</div>
+
+						<div class="inputbox">
 							<input name="ic_number" type="text" required="required" />
-						<label class="placeholder">IC Number</label>
-					</div>
+							<label class="placeholder">IC Number</label>
+						</div>
 
-					<div class="inputbox">
-						<input type="password" required="required" />
-						<label class="placeholder">Password</label>
-					</div>
+						<div class="inputbox">
+							<input name="password" type="password" required="required" />
+							<label class="placeholder">Password</label>
+						</div>
 
-					<div class="inputbox">
-						<span>Enter your position: </span>
-						<select required>
-							<option selected disabled hidden value="none"></option>
-							<option>Manager</option>
-							<option>Employee</option>
-							<option>Lecturer</option>
-							<option>Admin</option>
-						</select>
-					</div>
+						<div class="inputbox">
+							<span>Enter your position: </span>
+							<select required name="position">
+								<option selected disabled hidden value="none"></option>
+								<option>Manager</option>
+								<option>Employee</option>
+								<option>Lecturer</option>
+								<option>Admin</option>
+							</select>
+						</div>
 
-					<button>SIGN UP</button>
+						<button>SIGN UP</button>
 					</form>
 				</div>
 
