error message php

--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 					</div>
 
 					<div class="signup-area">
-						<span>Dont have an account? <a href="./signup.html">Sign up</a></span>
+						<span>don't have an account? <a href="./signup.html">Sign up</a></span>
 					</div>
 				</form>
 			</div>
