--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
 			<div>
 				<form class="login-section" action="login.php" method="post">
 					<div class="logo-area">
+						<img src="/img/companylogo.svg" alt="">
 						<span> HR HARMONY</span>
 					</div>
 
