--- a/dashboard copy.html
+++ b/dashboard copy.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dashboard - HR HARMONY</title>
-		<link rel="stylesheet" href="css/dashboard.css" />
+		<link rel="stylesheet" href="css/copy.css" />
 	</head>
 	<body>
 		<div class="sidebar">
