--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 			<div>
 				<form class="login-section" action="login.php" method="post">
 					<div class="logo-area">
-						<img src="/img/companylogo.svg" alt="">
+						<img src="img/companylogo.svg" />
 						<span> HR HARMONY</span>
 					</div>
 
