new desgn dasahboard

--- a/dashboard copy.html
+++ b/dashboard copy.html
@@ -50,6 +50,10 @@
 				</div>
 
 				<div class="sidebar-item">
+					<a href="#"><img src="img/icons/leave.svg" /> Apply leave</a>
+				</div>
+
+				<div class="sidebar-item">
 					<a href="#"><img src="img/icons/account.svg" /> Account</a>
 				</div>
 
